--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     padding: 0;
     font-family: "my_font";
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 :root{
     --color-fond : rgb(255, 102, 0);
@@ -18,6 +19,7 @@ header{
     padding: 15px 5px;
     align-items: center;
     position: sticky;
+    top: 0;
     background-color: var(--color-fond);
     font-family: "my_font";
 }
@@ -68,7 +70,8 @@ header > h2{
 .user-info{
     padding: 5px;
     display: flex;
-    min-width: 15%;
+    min-width: 15%; 
+    gap: 10px;
 }
 .user-image{
     width: 50px;
@@ -107,6 +110,7 @@ header > h2{
     padding: 10px;
     text-align: justify;
     box-sizing: border-box;
+    text-indent: 50px;
 }
 .article-footer{
     display: flex;
